# roo_transceivers

./: BUILD  MODULE.bazel  README.md  library.json  library.properties
.github/workflows/: workflow.yml
fake/: BUILD
fake/roo_transceivers/: environmental_sensor.cpp  environmental_sensor.h  fake_transceivers.h  relay.cpp  relay.h
proto/: generate.sh  roo_transceivers.proto
src/: roo_transceivers.h  roo_transceivers.pb.c  roo_transceivers.pb.h
src/roo_transceivers/: descriptor.cpp  descriptor.h  id.cpp  id.h  measurement.h  notification.h  universe.cpp  universe.h
src/roo_transceivers/binding/: binding.cpp  binding.h
src/roo_transceivers/binding/hal/: defaults.cpp  defaults.h  store.h
src/roo_transceivers/binding/hal/arduino_prefs/: arduino_prefs_store.cpp  arduino_prefs_store.h
src/roo_transceivers/helpers/: multiverse.h  simple_sensor_universe.h  transceiver_collection.h
src/roo_transceivers/onewire/: onewire.h
src/roo_transceivers/remote/: client.cpp  client.h  proto.cpp  proto.h  server.cpp  server.h
test/: id_test.cpp  remote_server_test.cpp  roo_transceivers_remote_test.cpp  transceiver_collection_test.cpp
